# Otterball-NFL

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.example.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 24f1ba3e76b5_replaced_finished_with_result.py  2bc54429e7f9_added_result_posted.py  2fe4f2e9aa1c_added_delete_result_msg_to_channel.py  307f2ece47bf_add_finished_field_to_game.py  34efbfea1c58_add_state_message.py  4edce0cfd4e3_added_gametypescaling.py  5cdb4906ed58_add_emoji_str_to_team.py  65c45ad6a85f_added_unique_constraint_for_poll.py  9036f1e65882_added_channel_active_field.py  c3627a65071c_added_unique_constraint_for_bet.py  d9dbb8a6f9e6_add_leaderboard_msg_id.py  f656453a42e9_add_apisource.py
migrations/: env.py  script.py.mako  utils.py
migrations/versions/: 43af3a107837_init2.py  55deb0580219_add_gameidentifier.py  62aa3d809f4b_move_state_message_id_to_poll.py  ad7a8657f8f0_added_stuff.py  e545c69bfb00_change_teamidentifier_uq_name.py  e95a2f0b6ada_add_team_color.py
otterball_nfl/: celeryconfig.py  main.py  models.py  settings.py  tasks.py
