[project]
name = "otterball-nfl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "discord-py>=2.6.2",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "nfl-data-py>=0.3.3",
    "sqlalchemy>=2.0.43",
    "celery>=5.5.3",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.5",
    "black>=25.1.0",
    "pandas-stubs==2.3.2.250827",
    "celery-types==0.23.0",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
